# slitchat

./: .gitignore  README.md  app.py  pyproject.toml
.cursor/rules/: uv-uber-alles.mdc
slitchat/: __init__.py  app.py
