[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slitchat"
version = "0.1.0"
description = "A Streamlit UI for chatting with Ollama models"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "rossja", email = "algorythm@gmail.com"}
]
dependencies = [
    "streamlit>=1.22.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["."] 